# albot2mapping

./: .gitignore
.Trash-1000/files/: points2D-1  points2D-10  points2D-11  points2D-2  points2D-3  points2D-4  points2D-45  points2D-46  points2D-47  points2D-48  points2D-49  points2D-5  points2D-50  points2D-51  points2D-52  points2D-53  points2D-54  points2D-55  points2D-56  points2D-57  points2D-58  points2D-59  points2D-6  points2D-60  points2D-61  points2D-62  points2D-63  points2D-64  points2D-65  points2D-66  points2D-67  points2D-68  points2D-69  points2D-7  points2D-70  points2D-8  points2D-9  view-1  view-2  view-3  (+1 more)
.Trash-1000/info/: LS-1-2.png.trashinfo  Map-2a-before.png.trashinfo  Map-2b-after.png.trashinfo  Map-3a-before.png.trashinfo  Map-3b-after.png.trashinfo  Map-4a-before.png.trashinfo  Map-4b-after.png.trashinfo  View-1.png.trashinfo  View-10.png.trashinfo  View-11.png.trashinfo  View-12.png.trashinfo  View-13.png.trashinfo  View-14.png.trashinfo  (+178 more)
src/: AutoXplorationNMapping.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Constants.h  GeometryFuncs.cpp  GeometryFuncs.h  GlobalMap.cpp  GlobalMap.h  GuidedXnMapping.cpp  ImageProcessing.cpp  ImageProcessing.h  ImageProcessing.h~  ImageReader.cpp  ImageReader.h  Laser2Surface.H  Laser2Surface.cpp  Makefile  Makefile.cogMapVersion  Makefile.oldStereoV  Makefile~  Map.cpp  Map.h  Node.cpp  Node.h  Obstacle.cpp  Obstacle.h  OfflineGuidedXnMapping.cpp  Output.cpp  Output.h  PathFinder.cpp  PathFinder.h  PointAndSurface.cpp  PointAndSurface.h  Printer.cpp  Printer.h  Robot.cpp  Robot.h  (+39 more)
(+13 files in other folders)
